# icub-firmware-shared

./: .gitignore  .mailmap  CMakeLists.txt  README.md  README.txt  icub-firmware-shared-config.cmake.in  icub_firmware_shared-config-version.cmake  icub_firmware_shared-config.cmake  icub_firmware_shared-config.cmake.in
can/: CMakeLists.txt
can/canProtocolLib/: iCubCanProto_analogSensorMessages.h  iCubCanProto_bootloaderMessages.h  iCubCanProto_classes.h  iCubCanProto_inertialSensorMessages.h  iCubCanProto_motorControlMessages.h  iCubCanProto_skinMessages.h  iCubCanProto_types.h
embot/: CMakeLists.txt
embot/core/: embot_core.cpp  embot_core.h  embot_core_binary.h
embot/prot/eth/: embot_prot_eth.h  embot_prot_eth_diagnostic.h  embot_prot_eth_diagnostic_Host.cpp  embot_prot_eth_diagnostic_Host.h  embot_prot_eth_diagnostic_Node.cpp  embot_prot_eth_diagnostic_Node.h  embot_prot_eth_rop.cpp  embot_prot_eth_rop.h  embot_prot_eth_ropframe.cpp  embot_prot_eth_ropframe.h
embot/tools/: embot_tools.h
eth/: CMakeLists.txt  embobj_wireshark.lua
eth/embobj/conf/: api.h
eth/embobj/core/core/: EONmutex.c  EONmutex.h  EONtask.h  EONtheSystem.c  EONtheSystem.h  EONtheSystem_hid.h  EONtheTimerManager.c  EOVmutex.c  EOVmutex.h  EOVmutex_hid.h  EOVtask.c  EOVtask_hid.h  EOVtheCallbackManager.c  EOVtheSystem.c  EOVtheSystem_hid.h  EOVtheTimerManager.c  EOVtheTimerManager.h  EOVtheTimerManager_hid.h  EOaction.c  EOaction.h  EOaction_hid.h  EOarray.c  EOarray.h  EOconstarray.c  EOconstarray.h  EOconstarray_hid.h  EOconstvector.c  EOconstvector.h  EOconstvector_hid.h  EOdeque.c  EOdeque.h  EOdeque_hid.h  EOfifo.c  EOfifo.h  EOfifoByte.c  EOfifoByte.h  EOfifoWord.c  EOfifoWord.h  EOlist.c  EOlist.h  (+24 more)
eth/embobj/core/exec/multitask/: EOMmutex.c  EOMmutex.h  EOMmutex_hid.h  EOMtask.c  EOMtheCallbackManager.c  EOMtheSystem.c  EOMtheSystem.h  EOMtheTimerManager.c
eth/embobj/core/exec/yarp/: EOYmutex.c  EOYmutex.h  EOYtheSystem.c  EOYtheSystem.h  EOYtheSystem_hid.h
eth/embobj/plus/board/ems/: EOtheCANmapping.c  EOtheCANmapping.h  EOtheCANmapping_hid.h  EOtheCANprotocol.c  EOtheCANprotocol.h  EOtheCANprotocol_hid.h  EoCANmapBoards.c  EoCANmapBoards.h  EoCANmapBoardsEB1.c  EoCANmapBoardsEB2.c  EoCANmapBoardsEBnoCAN.c  EoCANprotASperiodic.c  EoCANprotASperiodic.h  EoCANprotASpolling.c  EoCANprotASpolling.h  EoCANprotMCperiodic.c  EoCANprotMCperiodic.h  EoCANprotMCpolling.c  EoCANprotMCpolling.h  EoCANprotSKperiodic.c  EoCANprotSKperiodic.h
eth/embobj/plus/board/ems/config-can-mapping/: EoCANmapBoardsEB1.c  EoCANmapBoardsEB2.c  EoCANmapBoardsEBnoCAN.c
eth/embobj/plus/board/ems001/: EOicubCanProto.c  EOicubCanProto.h  EOicubCanProto_specifications.h  EOtheEMSapplDiagnostics.c  EOtheEMSapplDiagnostics.h
eth/embobj/plus/comm-v2/icub/: EoAnalogSensors.c  EoAnalogSensors.h  EoBoards.c  EoBoards.h  EoDiagnostics.h  EoError.c  EoError.h  EoMCConfigurations.c  EoMCConfigurations.h  EoMCConfigurations_hid.h  EoManagement-coupling.h  EoManagement.c  EoManagement.h  EoManagement.new.h  EoMeasures.h  EoMotionControl.c  EoMotionControl.h  EoSkin.h  EoUpdaterProtocol.c  EoUpdaterProtocol.h  EoUtilities.h
eth/embobj/plus/comm-v2/opcprot/: OPCprotocolManager.c  OPCprotocolManager.h  OPCprotocolManager_hid.h
eth/embobj/plus/comm-v2/transport/: EOagent.c  EOagent.h  EOconfirmationManager.c  EOconfirmationManager.h  EOdeviceTransceiver.c  EOdeviceTransceiver.h  EOdeviceTransceiver_hid.h  EOhostTransceiver.c  EOhostTransceiver.h  EOnv.c  EOnv.h  EOnvSet.c  EOnvSet.h  EOnvSet_hid.h  EOnv_hid.h  EOnvsetBRDbuilder.c  EOnvsetBRDbuilder.h  EOnvsetBRDbuilder_hid.h  EOnvsetDEVbuilder.c  EOnvsetDEVbuilder.h  EOnvsetDEVbuilder_hid.h  EOprotocolConfigurator.c  EOprotocolConfigurator.h  EOprotocolConfigurator_hid.h  EOproxy.c  EOproxy.h  EOreceiver.c  EOreceiver.h  EOreceiver_hid.h  EOrop.c  EOrop.h  EOropframe.c  EOropframe.h  EOropframe_hid.h  EOtheBOARDtransceiver.c  EOtheBOARDtransceiver.h  EOtheInfoDispatcher.c  EOtheInfoDispatcher.h  EOtheInfoDispatcher_hid.h  EOtransceiver.c  (+5 more)
eth/embobj/plus/ctrloop/: EOMtheEMSappl.c  EOMtheEMSappl.h  EOMtheEMSapplCfg.c  EOMtheEMSapplCfg.h  EOMtheEMSapplCfg_hid.h  EOMtheEMSappl_hid.h  EOMtheEMSbackdoor.c  EOMtheEMSconfigurator.c  EOMtheEMSconfigurator.h  EOMtheEMSconfigurator_hid.h  EOMtheEMSdiscoverylistener.c  EOMtheEMSdiscoverylistener.h  EOMtheEMSdiscoverytransceiver.c  EOMtheEMSdiscoverytransceiver.h  EOMtheEMSdiscoverytransceiver_hid.h  EOMtheEMSerror.c  EOMtheEMSerror.h  EOMtheEMSerror_hid.h  EOMtheEMSrunner.c  EOMtheEMSrunner.h  EOMtheEMSrunner_hid.h  EOMtheEMSsocket.c  EOMtheEMSsocket.h  EOMtheEMStransceiver.c  EOMtheEMStransceiver.h
eth/embobj/plus/embenv/: EOVtheEnvironment.c  EOtheARMenvironment.c
eth/embobj/plus/ipnet/: EOMtheIPnet.c  EOMtheIPnet.h  EOMtheIPnet.used.tests.xcables.c  EOMtheIPnet.used.tests.xcables.h  EOMtheIPnet_hid.h  EOMtheIPnet_hid.used.tests.xcables.h  EOVtheIPnet.c  EOsocket.c  EOsocket.h  EOsocketDatagram.c  EOsocketDatagram.h
eth/embobj/plus/mc/: EOaxisController.c  EOaxisController.h  EOaxisController_hid.h  EOdecoupler.c  EOdecoupler.h  EOdecoupler_hid.h  EOemsController.c  EOemsController.h  EOemsControllerCfg.h  EOemsController_hid.h  EOpid.c  EOpid.h  EOpid_hid.h  EOspeedmeter.c  EOspeedmeter.h  EOspeedmeter_hid.h  EOtrajectory.c  EOtrajectory.h  EOtrajectory_hid.h
eth/embobj/plus/utils/: eODeb_eoProtoParser.c  eODeb_eoProtoParser.h
eth/embot/: DiagnosticParser.h  EOMDiagnosticRopMsg.h  EOMDiagnosticUdpFooter.h  EOMDiagnosticUdpHeader.h  EOMDiagnosticUdpMsg.h  MsgDescription.h  MsgDescriptionExt.h
eth/robotconfig/: emBODYrobot.h
eth/robotconfig/api/: eOprot_robot.h
eth/robotconfig/v1/backdoor/: OPCprotocolManager_Cfg.c  OPCprotocolManager_Cfg.h
eth/robotconfig/v1/eprotocol/: eOprot_b01.c  eOprot_b01.h  eOprot_b02.c  eOprot_b02.h  eOprot_b03.c  eOprot_b03.h  eOprot_b04.c  eOprot_b04.h  eOprot_b05.c  eOprot_b05.h  eOprot_b06.c  eOprot_b06.h  eOprot_b07.c  eOprot_b07.h  eOprot_b08.c  eOprot_b08.h  eOprot_b09.c  eOprot_b09.h  eOprot_b10.c  eOprot_b10.h  eOprot_b11.c  eOprot_b11.h  eOprot_robot_darmstadt.c  eOprot_robot_ge04.c
(+29 files in other folders)
